fleshed out q6 a bit but not finished yet

--- a/exams/2013-11-01/itads-exam-2013-11-01.tex
+++ b/exams/2013-11-01/itads-exam-2013-11-01.tex
@@ -214,9 +214,15 @@ Give an adjacency matrix, let them draw the graph, describe Dijkstra, let them r
 
 \question{6 points}
 
-Hmm\ldots unbalanced tree problem is always a good one, and I don't think I have trees yet.
-Or something to do with tree traversal\ldots
+\begin{enumerate}
+\item
+  someone suggests to sort a linked list in order to be able to use binary search (does not make sense because linked lists do not provide random access)
+\item
+  someone suggests using level-order traversal to save a balanced binary search tree (as opposed to in- or post-order traversal which makes it unbalanced when you load it back)
+\item
+  email routing system with 10 priority levels, expect to have millions of emails in the queue; people suggest different things: use a heap, use a fixed-size array of linked lists, use a single dynamic array. which do you think is the best solution and why?
+\end{enumerate}
 
-Or some tricky questions, like someone suggests to sort a linked list in order to be able to use binary search (does not make sense because linked lists do not provide random access), someone suggests to sort an array before looking for pairs of values that sum to a divisor of a given number (I don't think sprting here makes sense because youhave to try all combinations anyway), but also include two sensible suggestions, such as using level-order traversal to save a balanced binary search tree (as opposed to in- or post-order traversal which makes it unbalanced when you load it back).
+
 
 \end{document}
