OK done... will just need to do one final double-check

--- a/exams/2013-11-01/itads-exam-2013-11-01.tex
+++ b/exams/2013-11-01/itads-exam-2013-11-01.tex
@@ -179,9 +179,26 @@ In the following table, match the data structure names with the diagrams \textbf
 
 \clearpage
 
-\question{6 points}
+\question{4 points}
 
-Do a bunch of runtime estimates given big-Oh expressions.
+\emph{Note that table of numeric values at the bottom of this page.}
+
+\begin{enumerate}
+\item
+  A program requires 1 minute to process a problem of size 500'000.
+  The program is know to have quadratic runtime complexity $O(N^2)$.
+  How long will this program take to process a problem of size 2'000'000?
+\item
+  A program with cubic runtime complexity $O(N^3)$ has taken 2 seconds to solve a problem of size 10.
+  The runtime on another problem has been measured to be 3.456 seconds.
+  How big was that problem?
+\item
+  A logarithmic algorithm $O(\log N)$ took 30 milliseconds to process an array of size 512.
+  If you only have 10 milliseconds available, what is the maximum array size that this algorithm can be expected to handle?
+\item
+  A sorting algorithm with complexity $O(N\log N)$ needs 1 minute to sort 4'096 megabytes (MB) of data.
+  How long will it run on 16'384 MB?
+\end{enumerate}
 
 \vfill
 
