one more question done

--- a/exams/2014-01-11/itads-exam-2014-01-11.tex
+++ b/exams/2014-01-11/itads-exam-2014-01-11.tex
@@ -140,6 +140,7 @@ Consider the following possibilities:
 \end{itemize}
 
 For each of the six functions given on the next page, write down which of the above 12 operations it implements.
+You can write the function label (A, B, C, D, E, and F) beside the corresponding list items above.
 
 \clearpage
 
@@ -148,6 +149,7 @@ For each of the six functions given on the next page, write down which of the ab
 \verbatiminput{shell.c}
 \normalsize
 \onecolumn
+
 
 
 \clearpage
@@ -204,6 +206,26 @@ What is the runtime complexity for each of the following six programs?
     \bottomrule
   \end{tabular}
 \end{center}
+
+
+
+\clearpage
+\question{5 points}
+
+\begin{enumerate}
+\item
+  Draw a diagram of the binary search tree that gets created by the following sequence of insertions:
+  \textbf{5, 4, 2, 6, 3, 1, 7}
+\item
+  In what sequence are these number visited by \textbf{pre-order} traversal?
+\item
+  What is the sequence when we use \textbf{post-order} traversal?
+\item
+  What is the sequence with \textbf{in-order} traversal?
+\item
+  And finally, what sequence results when we use \textbf{level-order} traversal?
+\end{enumerate}
+
 
 
 \end{document}
