another question down...

--- a/exams/2014-01-11/itads-exam-2014-01-11.tex
+++ b/exams/2014-01-11/itads-exam-2014-01-11.tex
@@ -228,4 +228,44 @@ What is the runtime complexity for each of the following six programs?
 
 
 
+\clearpage
+\question{4 points}
+
+Knowing the ``Big-Oh'' complexity class of a program's running time $T$ in function of problem size $N$, written $T(N)\in O(F(N))$, allows us to estimate two kinds of things.
+
+\begin{itemize}
+\item
+  Runtime prediction: if we know that the program took $T_1$ time to run on a problem of size $N_1$, then we can estimate the time $T_2$ required to solve a problem of size $N_2$.
+\item
+  Problem size prediction: if, on the other hand, we are given a runtime budget of $T_2$, we can estimate the corresponding problem size $N_2$ (again assuming that we know the time $T_1$ for the known problem size $N_1$).
+\end{itemize}
+
+Write down the formulas which allow you to solve the \textbf{runtime prediction} problem for the following complexity classes:
+
+\begin{itemize}
+\item
+  $\log N$
+\item
+  $N^2\log N$
+\item
+  $N^3$
+\item
+  $2^N$
+\end{itemize}
+
+Then write down the formulas to solve the \textbf{problem size prediction} problem for the following complexity classes:
+
+\begin{itemize}
+\item
+  $\log N$
+\item
+  $N$
+\item
+  $N^2$
+\item
+  $2^N$
+\end{itemize}
+
+
+
 \end{document}
